# PhysimWASM

./: .gitignore  CMakeLists.txt  README.md
Application/: Game.cpp  Game.hpp  main.cpp
build_wasm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
engine/: Engine.cpp  Engine.hpp
engine/Logger/: Logger.cpp  Logger.hpp
engine/Physics/: Physics.cpp  Physics.hpp  SpatialHash.hpp  body.hpp
engine/ResourceManager/: ResourceManager.cpp  ResourceManager.hpp
engine/core/: common.hpp  core.cpp  core.hpp
engine/platform/: SDLCompatability.hpp  WasmAdapter.cpp  WasmAdapter.hpp
engine/renderer/: Inter_Renderer.hpp  Sprite.cpp  Sprite.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  factory_renderer.hpp  loadShader.hpp
engine/renderer/OpenGLES3Renderer/: OpenGLES3Renderer.cpp  OpenGLES3Renderer.hpp
engine/renderer/OpenGLRenderer/: OpenGLRenderer.cpp  OpenGLRenderer.hpp
engine/renderer/SoftwareRenderer/: SoftwareRenderer.cpp  SoftwareRenderer.hpp
web/: PhysimWASM.data  PhysimWASM.html  PhysimWASM.js  PhysimWASM.wasm
